fix line not showing in safari (#987)
* fix for hidden bottom line

* add spacing backing into route selector

--- a/apps/concierge_site/assets/css/_forms.scss
+++ b/apps/concierge_site/assets/css/_forms.scss
@@ -197,6 +197,7 @@ label.form__label--inline {
 .btn__radio--toggle-item-connected {
   flex-grow: 1 !important;
   flex-basis: 0 !important;
+  padding: 0;
 }
 
 .btn__radio--toggle-container-wrap {
